--- a/.github/workflows/build-and-push-runner-image.yml
+++ b/.github/workflows/build-and-push-runner-image.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PUBLISH_TOKEN }}
 
       - name: Build Docker image
         run: |
